Fixed footer layout on mobile

--- a/styles.css
+++ b/styles.css
@@ -401,7 +401,7 @@ input[type=text], input[type=submit], input[type=button] {
   .footer {
     text-transform: uppercase;
   }
-  .footermenu_item {
+  .footermenu-item {
     display: block;
     margin: 0px;
   }
